k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxi-app
  namespace: mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxi-app
  template:
    metadata:
      labels:
        app: taxi-app
    spec:
      containers:
        - name: taxi-app
          image: taxi-app:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mlflow-data
              mountPath: /mlflow
      volumes:
        - name: mlflow-data
          persistentVolumeClaim:
            claimName: mlflow-pvc
