k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: mlflow-local:v3
          imagePullPolicy: Never
          command:
            - mlflow
            - server
            - --backend-store-uri
            - sqlite:////mlflow/mlflow.db
            - --artifacts-destination
            - /mlflow/artifacts
            - --serve-artifacts
            - --host
            - 0.0.0.0
            - --port
            - "5001"
            - --allowed-hosts
            - "mlflow-service:5001,localhost:5001,localhost:*,127.0.0.1:5001,127.0.0.1:*,mlflow.local,mlflow.local:*"
            - --cors-allowed-origins
            - "http://localhost:5001,http://127.0.0.1:5001,http://mlflow.local"
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: mlflow-data
              mountPath: /mlflow
      volumes:
        - name: mlflow-data
          persistentVolumeClaim:
            claimName: mlflow-pvc
