k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taxi-app-service
  namespace: mlops
spec:
  selector:
    app: taxi-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
