k8s/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: mlops
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
